# bini_sensor_ros_plugins

./: CMakeLists.txt  README.md  package.xml
include/bini_sensor_ros_plugins/: MagnetometerROSPlugin.hh  ROSBaseModelPlugin.hh  ROSBasePlugin.hh
src/: MagnetometerROSPlugin.cc  ROSBaseModelPlugin.cc  ROSBasePlugin.cc
